Basic site setup, I'll write the CSS file tomorrow, hopefully

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Gsarod's portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gsarod's Portfolio</title>
 </head>
 <body>
-  <h1>This is a test do see if my index works</h1>
-  
+
+  <h1>[W.I.P.] About Me</h1>
+
+  <h2>Self-taught junior programmer</h2>
+    <p>Working on projects when I have some free time. Applying for a BTEC HND in Cybersecurity at Ynov Campus Bordeaux.<br>
+    I like to do small projects that serve me a purpose currently working on a cli calendar app. 
+    </p>
+
+  <h3>Skills</h3>
+    <ul>
+      <li>C/C++</li>
+      <li>Python</li>
+      <li>Linux (Daily drive and using it for a remote server)</li>
+    </ul>
+  <h3>Socials</h3>
+    <ul>
+      <li>
+        <a href="https://www.linkedin.com/in/gabriel-ungurasu-a05600291/">
+          Linkedin
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/Gsarod">
+        Github
+        </a>
+      </li>
+    </ul>
+
 </body>
 </html>
+
