--- a/index.html
+++ b/index.html
@@ -4,36 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gsarod's Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon"type="image/svg" href="AddressBook.svg">
 </head>
 <body>
-
-  <h1>[W.I.P.] About Me</h1>
-
-  <h2>Self-taught junior programmer</h2>
-    <p>Working on projects when I have some free time. Applying for a BTEC HND in Cybersecurity at Ynov Campus Bordeaux.<br>
-    I like to do small projects that serve me a purpose currently working on a cli calendar app. 
-    </p>
-
-  <h3>Skills</h3>
-    <ul>
-      <li>C/C++</li>
-      <li>Python</li>
-      <li>Linux (Daily drive and using it for a remote server)</li>
-    </ul>
-  <h3>Socials</h3>
-    <ul>
-      <li>
-        <a href="https://www.linkedin.com/in/gabriel-ungurasu-a05600291/">
-          Linkedin
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/Gsarod">
-        Github
-        </a>
-      </li>
-    </ul>
-
+  
+  <div class="title">
+    <h1>About Me</h1>
+  </div>
+  <div class="content">
+    <h2>Self-taught junior programmer</h2>
+      <p class="about">Working on projects when I have some free time. Applying for a BTS CIEL at Ynov Campus Bordeaux.<br>
+      I like to do small projects that serve me a purpose currently working on a cli calendar app. 
+      </p>
+    <hr>
+    <h3>Skills</h3>
+      <ul>
+        <li>C/C++</li>
+        <li>Python</li>
+        <li>Linux (Daily drive and using it for a remote server)</li>
+        <li>Basic HTML/CSS knowledge (like this site)</li>
+      </ul>
+    <h3>Socials</h3>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/gabriel-ungurasu-a05600291">
+            Linkedin
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/Gsarod">
+          Github
+          </a>
+        </li>
+      </ul>
+  </div>
 </body>
 </html>
 
