Restructured the whole site, adding more stuff as it is needed

--- a/index.html
+++ b/index.html
@@ -6,39 +6,35 @@
   <title>Gsarod's Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon"type="image/svg" href="AddressBook.svg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   
   <div class="title">
-    <h1>About Me</h1>
+    <h1>Gsarod  portfolio</h1>
   </div>
-  <div class="content">
-    <h2>Self-taught junior programmer</h2>
-      <p class="about">Working on projects when I have some free time. Applying for a BTS CIEL at Ynov Campus Bordeaux.<br>
-      I like to do small projects that serve me a purpose currently working on a cli calendar app. 
-      </p>
-    <hr>
-    <h3>Skills</h3>
-      <ul>
-        <li>C/C++</li>
-        <li>Python</li>
-        <li>Linux (Daily drive and using it for a remote server)</li>
-        <li>Basic HTML/CSS knowledge (like this site)</li>
-      </ul>
-    <h3>Socials</h3>
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/gabriel-ungurasu-a05600291">
-            Linkedin
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/Gsarod">
-          Github
-          </a>
-        </li>
-      </ul>
-  </div>
+  <div class="content"> 
+    
+    
+    <a href="pages/AboutMe.html">
+      <button class="prjbtn"><i class="fa fa-user"></i><br>About me</button>
+    </a>
+    <a href="pages/projects.html">
+      <button class="prjbtn"><i class="fa fa-gear"></i><br>projects</button>
+    </a>
+
+
+
+    <h2>Socials</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/gabriel-ungurasu-a05600291" >
+        <button class="btn"><i class="fa fa-linkedin"></i></button>
+      </a>
+      <a href="https://www.github.com/Gsarod">
+        <button class="btn"><i class="fa fa-github"></i></button>
+      </a>
+    </p>
+  </div> 
 </body>
 </html>
 
