Changed the colour palette

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     
     
     <a href="pages/AboutMe.html">
-      <button class="prjbtn"><i class="fa fa-user"></i><br>About me</button>
+      <button class="btn"><i class="fa fa-user"></i><br></button>
     </a>
     <a href="pages/projects.html">
-      <button class="prjbtn"><i class="fa fa-gear"></i><br>projects</button>
+      <button class="btn"><i class="fa fa-gear"></i><br></button>
     </a>
 
 
@@ -31,10 +31,14 @@
         <button class="btn"><i class="fa fa-linkedin"></i></button>
       </a>
       <a href="https://www.github.com/Gsarod">
-        <button class="btn"><i class="fa fa-github"></i></button>
+        <button class="btn">
+          <i class="fa fa-github"></i>
+        </button>
       </a>
     </p>
-  </div> 
+
+  
+  </div>
 </body>
 </html>
 
