--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,7 +17,7 @@
     
     
     <a href="projects/rong.html">
-      <button class="prjbtn"><i class="fa fa-gamepad"></i><br>Rong</button>
+      <button class="btn"><i class="fa fa-gamepad"></i><br>Rong</button>
     </a>
   </div> 
   <div class="content">
