--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -30,14 +30,14 @@
     </a>
 
     <!--Buttons info-->
-    <div>
+    <div class="bar" id="infoBar">Informations</div>
+    <div class="context box" id="infoBox">
       <div style="display: grid; grid-template-columns: auto auto; grid-gap: 0;">
         <h3 class="infoTag" id="infoTag" style="margin: 0; ;"></h3>
         <h3 class="infoTitle" id="infoTitle" style="margin: 0;"></h3>
       </div>
       <p class="infoBlock" id="infoBlock" style="margin: 0;"></p>
     </div>
-  </div>
 
 </div>
 </body>
