--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -21,7 +21,7 @@
     <p class="container">
       
       <a href="projects/rong.html">
-        <btn data-title="Rong" data-tag="Game" data-info="What if pong was a rouge-like ? ">
+        <btn title="Rong" tag="Game" desc="What if pong was a rouge-like ? ">
           <span class="icon"><i class="fa fa-gamepad"></i><br></span>
         </btn>
       </a>
@@ -33,8 +33,10 @@
         <span class="icon"><i class="fa fa-home"></i></span>
       </StBtn>
     </a>
-  <!--Buttons info-->
-    <div>
+  
+    <!--Buttons info-->
+    <div class="bar" id="infoBar">Informations</div>
+    <div class="context box" id="infoBox">
       <div style="display: grid; grid-template-columns: auto auto; grid-gap: 0;">
         <h3 class="infoTag" id="infoTag" style="margin: 0; ;"></h3>
         <h3 class="infoTitle" id="infoTitle" style="margin: 0;"></h3>
