--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="title">
     <div class="container">
       <div class="StartBar"></div>
-      <div class="BodyBar"></div>
+      <div class="BodyBar">Title</div>
       <style>
         .BodyBar {
             width:137px;
