Jarvis '95 the fuck out of it

--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -12,10 +12,17 @@
 </head>
 <body>
 
+  <div class="bkg">
+  <!--Title-->
   <div class="title">
-    <h1>About Me</h1>
+    <div class="container">
+      <div class="StartBar"></div>
+      <div class="BodyBar">Title</div>
+      <div class="EndBar"></div>
+      <h1>Portfolio</h1>
   </div>
-  <div class="content"> <!--Serious yapping-->
+  <img src="/lib/img/MIKUUUU.png" class="asciiart">
+       <!--Serious yapping-->
       <h2>Self-taught junior programmer</h2> 
 
         <p class="about">Working on projects when I have some free time. Applying for a BTS CIEL at Ynov Campus Bordeaux.<br>
@@ -28,18 +35,19 @@
         <span class="icon"><i class="fa fa-home"></i></span>
       </StBtn>
     </a>
+  <!--Clock-->
+  <div class="clock container">
+    <div class="StartBar"></div>
+    <div class="BodyBar">Current time</div>
+    <div class="EndBar"></div>
+    <clockbody id="time"></clockbody>
 
-    <!--Buttons info-->
-    <div class="bar" id="infoBar">Informations</div>
-    <div class="context box" id="infoBox">
-      <div style="display: grid; grid-template-columns: auto auto; grid-gap: 0;">
-        <h3 class="infoTag" id="infoTag" style="margin: 0; ;"></h3>
-        <h3 class="infoTitle" id="infoTitle" style="margin: 0;"></h3>
-      </div>
-      <p class="infoBlock" id="infoBlock" style="margin: 0;"></p>
-    </div>
+    <taskbar>
+      <img src="/lib/img/win95 icon.png" class="win95logo">
+    </taskbar>  
+  
+  </div>
 
-</div>
 </body>
 </html>
 
