Fixed the ASCII art being at the foreground

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="EndBar"></div>
       <h1>Portfolio</h1>
     </div>
-    <img src="/lib/img/MIKUUUU.png" class="asciiart">
+    
   </div>
 
   
@@ -97,6 +97,7 @@
       <p class="infoBlock" id="infoBlock" style="margin: 0;"></p>
       </div> 
     </div>
+    
   </div>
   
   <!--Social buttons-->
@@ -110,14 +111,15 @@
           <i class="fa fa-github"></i>
         </StBtn>
       </a>
-  </div>
-  </div>
+
   <taskbar>
     <img src="/lib/img/win95 icon.png" class="win95logo">
   </taskbar>
-  
+   
 </div>
-  
+<div>
+  <img src="/lib/img/MIKUUUU.png" class="asciiart">
+</div>  
 </body>
 </html>
 
