Changed layout a bit

--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -21,6 +21,7 @@
       <div class="EndBar"></div>
       <h1>Portfolio</h1>
   </div>
+  <div class="content">
   <img src="/lib/img/MIKUUUU.png" class="asciiart">
        <!--Serious yapping-->
       <h2>Self-taught junior programmer</h2> 
@@ -45,7 +46,7 @@
     <taskbar>
       <img src="/lib/img/win95 icon.png" class="win95logo">
     </taskbar>  
-  
+  </div>
   </div>
 
 </body>
