--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -27,7 +27,7 @@
   <div class="content">
     <!--Navigating buttons-->
     <p class="container">
-        
+
       <a href="projects/rong.html">
         <btn title="Rong" tag="Game" desc="What if pong was a rouge-like ? ">
           <span class="icon"><i class="fa fa-gamepad"></i><br></span>
@@ -36,22 +36,22 @@
     </p>
 
 
+    <!--Navigating buttons-->
     <a href="../index.html">
       <StBtn>
         <span class="icon"><i class="fa fa-home"></i></span>
       </StBtn>
     </a>
+
     <div class="container">
       <!--Buttons info-->
       <div class="box" id="infoBox">
         <div class="container">
           <div class="StartBar"></div>
-          <div class="BodyBar">Informations</div>
+          <div class="BodyBar" id="infoTitle"></div>
           <div class="EndBar"></div>
         </div>
       <div style="display: grid; grid-template-columns: auto auto; grid-gap: 0;">
-        <h3 class="infoTag" id="infoTag" style="margin: 0;"></h3>
-        <h3 class="infoTitle" id="infoTitle" style="margin: 0;"></h3>
       </div>
       <p class="infoBlock" id="infoBlock" style="margin: 0;"></p>
       </div>
